--- a/ctpy_integrated_lab.ipynb
+++ b/ctpy_integrated_lab.ipynb
@@ -134,7 +134,7 @@
         "b.    Write a Python program for counting a specific letter 'o' in a given string; the number of times vowel\n",
         "‘o’ appears.\n",
         "\n",
-        "c.    Write a Python Program to find the frequency of each word in given strings/strings\n",
+        "c.    Write a Python Program to find the frequency of each word in given string(s) \n",
         "\n",
         "d.    Store the following for ‘n’ countries, using a dictionary:                            \n",
         "i.  Name of a country, country’s capital, per capita income of the country.\n",
@@ -405,7 +405,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5.  Write an interactive calculator. User input is assumed to be a formula that consist of a number, an operator\n",
+        "5.  Create an interactive calculator. User input is assumed to be a formula that consist of a number, an operator\n",
         "(at least + and -), and another number, separated by white space (e.g. 1 + 1). Split user input using str.split(), and check whether the resulting list is valid:\n",
         "\n",
         "a.   If the input does not consist of 3 elements, raise a FormulaError, which is a custom Exception.\n",
